--- a/src/app/upload/upload.component.scss
+++ b/src/app/upload/upload.component.scss
@@ -5,14 +5,60 @@
     display: flex;
     position: absolute;
     top: 0;
-    flex-direction: column;
+    flex-direction: row;
     height: 100vh;
     width: 100vw;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     padding-top: 5em;
     box-sizing: border-box;
+    .divider {
+      display: inline-block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 3em;
+      color: $accent;
+    }
+    .left,
+    .right {
+      display: flex;
+      position: relative;
+      flex-direction: column;
+      justify-content: space-evenly;
+      align-items: center;
+      height: 100%;
+      width: 50%;
+      // filter: contrast(5px);
+      form {
+        display: flex;
+        flex-direction: column;
+      }
+      // &:hover {
+      //   filter: none;
+      // }
+      // .smoke {
+      //   display: block;
+      //   position: absolute;
+      //   z-index: 1000;
+      //   height: 100%;
+      //   width: 100%;
+      //   background-color: black;
+      //   opacity: 0.5;
+      //   transition: all 0.5s ease-in-out;
+      //   &:hover {
+      //     opacity: 0;
+      //     background-color: none;
+      //     // pointer-events: none;
+      //   }
+      // }
+    }
+
     &__msg {
+      display: block;
+      position: absolute;
+      top: 0;
       font-size: 3em;
       color: $primary;
       font-family: $font-primary;
