Upgraded UPLOAD page

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,6 +15,11 @@
         Dashboard
       </button>
     </li>
+    <li class="header__menu-item" routerLink="/analysis">
+      <button class="header__menu-item-btn" mat-button color="primary">
+        Analysis
+      </button>
+    </li>
     <li class="header__menu-item" routerLink="/team">
       <button class="header__menu-item-btn" mat-button color="primary">
         Team
