--- a/src/app/upload/upload.component.scss
+++ b/src/app/upload/upload.component.scss
@@ -34,6 +34,16 @@
       form {
         display: flex;
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        .textarea {
+          &__input {
+            width: 35em;
+            &-field {
+              height: 10em;
+            }
+          }
+        }
       }
       // &:hover {
       //   filter: none;
