--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -1,1 +1,40 @@
-<p>team works!</p>
+<div class="team">
+  <h1 class="team__msg">THE TEAM</h1>
+  <div class="team__icons">
+    <img
+      class="team__icon"
+      style="height:7em;width: auto;"
+      src="./assets/images/brain.svg"
+      alt=""
+    />
+    <img
+      class="team__icon"
+      style="height:5em;width: auto;"
+      src="./assets/images/divide-mathematical-sign.svg"
+      alt=""
+    />
+    <img
+      class="team__icon"
+      style="height:5em;width: auto;"
+      src="./assets/images/KPMG.svg"
+      alt=""
+    />
+  </div>
+  <ul class="team__members">
+    <li class="team__member">
+      <h1>Bhavana Rautela</h1>
+    </li>
+    <li class="team__member">
+      <h1>Sharma Palak</h1>
+    </li>
+    <li class="team__member">
+      <h1>Eshwar</h1>
+    </li>
+    <li class="team__member">
+      <h1>Lipsa Pradhan</h1>
+    </li>
+    <li class="team__member">
+      <h1>Prabhu Ram Kumar</h1>
+    </li>
+  </ul>
+</div>
