--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -25,7 +25,7 @@
       <h1>Bhavana Rautela</h1>
     </li>
     <li class="team__member">
-      <h1>Sharma Palak</h1>
+      <h1>Palak Sharma</h1>
     </li>
     <li class="team__member">
       <h1>Eshwar</h1>
